# sisi

./: .env.template  .gitignore  L1 Docs CN.md  L1 docs.md  README.md  README_BACKUP.md  coal_mmsi.json  databricks.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/resources/: structure_details.md
core/: conf.py
core/ShoreNet/: conf.py  main.py
core/cython/: geo_cython.c  setup.py  setup_geo_cython.py
core/notebooks/: analysis.ipynb  analysis_backup.ipynb  analysis_statics.ipynb  coal_mmsi.json  trust_score.ipynb  港口聚类.ipynb
core/python/: main_events_match_polygon.py  main_map_events_polygons.py  main_upload_events.py  main_upload_statics.py
docs/: conf.py  index.rst
docs/modules/: modules.rst  sisi_ops.ShoreNet.analyze.polygon.rst  sisi_ops.ShoreNet.analyze.rst  sisi_ops.ShoreNet.conf.rst  sisi_ops.ShoreNet.definitions.rst  sisi_ops.ShoreNet.events.generic.rst  sisi_ops.ShoreNet.events.rst  sisi_ops.ShoreNet.rst  sisi_ops.ShoreNet.statics.rst  sisi_ops.ShoreNet.utils.db.rst  sisi_ops.ShoreNet.utils.rst  sisi_ops.cython.rst  sisi_ops.infrastructure.data.rst  sisi_ops.infrastructure.definition.rst  sisi_ops.infrastructure.rst  sisi_ops.notebooks.rst  sisi_ops.python.ShoreNet.main_map_events_polygons.rst  sisi_ops.python.ShoreNet.main_mapping_od_paris.rst  sisi_ops.python.ShoreNet.rst  sisi_ops.python.infrastructure.main_init_db.rst  sisi_ops.python.infrastructure.rst  sisi_ops.python.rst  sisi_ops.python.utils.rst  sisi_ops.rst  (+4 more)
sisi_ops/: conf.py
test/: test_events.py
tests/: test_analysis.py  test_events.py
(+194 files in other folders)
